# Subnautica-Base-Planner-CLI

./: Cargo.toml  README.md
src/: lib.rs  main.rs  shell.rs
src/gui/: app.rs  icon.rs  mod.rs  run.rs  splash_screen.rs
src/shell/: menus.rs  mod.rs
src/subnautica/: base.rs  biomes.rs  integrity.rs  materials.rs  mod.rs
