[package]
name = "subnautica_base_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
crossterm = "0.25.0"
lazy_static = "1.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
terminal-menu = "2.0.5"
