[package]
name = "subnautica_base_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
convert_case = "0.6.0"
crossbeam-channel = "0.5.14"
crossterm = "0.25.0"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = "0.25.5"
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
strum = { version = "0.26.3", features = ["derive"] }
terminal-menu = "3.0.0"
